2006-07-16 Joerg Wunsch <j@uriah.heep.sax.de>

	First stab at an implementation of the STK500 parallel programming
	feature (v2 firmware only), named "stk500pp".  Still not yet
	complete: EEPROM writes not working, documentation missing, only
	ATmega16 parameters available in avrdude.conf.in, some parameters
	not yet implemented.
	* avrdude.conf.in: Add sample parameters for PP mode to ATmega16.
	* avrpart.h: Add the parallel programming control parameters.
	* avrpart.c: (Ditto.)
	* config_gram.y: Add stk500pp configuration grammar.
	* lexer.l: Add stk500pp token recognition.
	* stk500v2.h: Add declaration for stk500pp_initpgm().
	* stk500v2.c: Add stk500pp implementation.

2006-07-11 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Fix the signatures for the
	ATmega164/324 devices.

2006-07-10 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Enter the signatures for the
	ATmega164/324/644 devices.

2006-05-25 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c: Implement extended addressing needed
	for the ATmega256x devices.
	* avrdude.1: Document ATmega256x support.
	* doc/avrdude.texi: Document ATmega256x support.
	Also document Solaris port defaults.

2006-05-24 Joerg Wunsch <j@uriah.heep.sax.de>

	* avr.c: Start implementing support for ATmega256x;
	jtag2 and bitbang programmers are working, stk500v2
	still needs to be done.
	* avrdude.conf.in: (Ditto.)
	* avrpart.c: (Ditto.)
	* avrpart.h: (Ditto.)
	* config_gram.y: (Ditto.)
	* lexer.l: (Ditto.)

2006-04-18 Joerg Wunsch <j@uriah.heep.sax.de>

	Contributed by Julius Luukko <Julius.Luukko@lut.fi>:
	* avrdude.conf.in: Add the "ere-isp-avr" programmer.

2006-04-13 Joerg Wunsch <j@uriah.heep.sax.de>

	* par.c: Add logic to negate parallel-port signals in
	avrdude.conf using a tilde.

	Contributed by Bram Daams:
	* avrdude.conf.in: Add the "atisp" programmer entry that
	makes use of negated signals.

2006-03-28 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add entries for AT90USB{64,128}{6,7}
